fix: sonar issues